Fix overflow issue on transaction pages (#3320)

--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -50,6 +50,7 @@ input[type='file'] {
   color: inherit;
   display: block;
   font-size: 1rem;
+  max-width: 100%;
 }
 
 .field--fileupload {
